force-app/main/default/objects/LOB_Auto_Approval_Administration__c/LOB_Auto_Approval_Administration__c.object-meta.xml
<CustomObject>
    <label>LOB Auto-Approval Administration</label>
    <nameField>
        <label>LOB Auto-Approval Administration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LOB Auto-Approval Administration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>