force-app/main/default/objects/LOB_Auto_Approval_Administration__c/fields/Auto_approval_enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_approval_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto-approval enabled?</label>
    <type>Checkbox</type>
</CustomField>