force-app/main/default/objects/LOB_Auto_Approval_Administration__c/fields/Auto_approval_T_C_Location__c.field-meta.xml
<CustomField>
    <fullName>Auto_approval_T_C_Location__c</fullName>
    <label>Auto-approval T &amp; C Location</label>
    <type>Url</type>
</CustomField>