force-app/main/default/objects/LOB_Auto_Approval_Administration__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>LOB Auto-Approval Administration Details</relationshipLabel>
    <relationshipName>LOB_Auto_Approval_Administration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>