force-app/main/default/objects/LOB_Auto_Approval_Administration__c/fields/LOB_Auto_approval_Administration_Name_Un__c.field-meta.xml
<CustomField>
    <fullName>LOB_Auto_approval_Administration_Name_Un__c</fullName>
    <label>LOB Auto-approval Administration Name_Un</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>