force-app/main/default/objects/LOB_Auto_Approval_Administration__c/fields/LOB_Name__c.field-meta.xml
<CustomField>
    <fullName>LOB_Name__c</fullName>
    <label>LOB Name</label>
    <referenceTo>LOB_Administration__c</referenceTo>
    <relationshipLabel>LOB Auto-Approval Administration Details</relationshipLabel>
    <relationshipName>LOB_Auto_Approval_Administration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>