force-app/main/default/objects/LOB_Auto_Approval_Administration__c/validationRules/Restrict_LOB_auto_approval_Admin_CR6656.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_LOB_auto_approval_Admin_CR6656</fullName>
    <active>true</active>
    <description>Only users with LOB title as &quot;GCC Global Program Manager&quot; should be allowed to create or update LOB auto-approval administration records</description>
    <errorConditionFormula>AND
( 
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$User.LOB_Title__c &lt;&gt; &quot;GCC Global Program Manager&quot; 
)</errorConditionFormula>
    <errorMessage>Your &quot;LOB Title&quot; is not &quot;GCC Global Program Manager&quot;.You cannot create or update the details.</errorMessage>
</ValidationRule>